compiler/tests/errortests/nonexaustive-enum-match2.txt
FILENAME:12:5: error: Non-exhaustive match expression: missing case for variant 'C'.
    match x {
    ^----
FILENAME:12:5: error: Non-exhaustive match expression: missing case for variant 'D'.
    match x {
    ^----
